fix spacing on title and description

--- a/_includes/assets/sass/components/_dl.scss
+++ b/_includes/assets/sass/components/_dl.scss
@@ -9,7 +9,7 @@
     size: 1.2rem;
     weight: $tbds-font-weight-bold;
   }
-  margin-bottom: $tbds-space-3;
+  margin-bottom: $tbds-space-4;
 }
 
 .dl--description {
